updated profile page

--- a/src/main/resources/templates/threads.html
+++ b/src/main/resources/templates/threads.html
@@ -25,6 +25,7 @@
 
     <div class="container">
         <h1 class="display-4">Threads</h1>
+        <hr class="my-4">
     </div>
 
 </div>
@@ -32,3 +33,4 @@
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
+</html>
