--- a/src/main/resources/templates/updateprofile.html
+++ b/src/main/resources/templates/updateprofile.html
@@ -31,18 +31,30 @@
     <div class="container">
         <h1 class="display-4">Profile</h1>
         <hr class="my-4">
+        <p>Please update your details to use the forum.</p>
     </div>
 
 </div>
 
-<div class="card">
-    <div class="card-body">
-        <p> Name: {{firstname}} {{lastname}} </p>
-        <p> Username: {{username}}
-        <p> Email: {{email}}</p>
+<div style="width: 400px; margin-left: 125px;">
+<form action="/users/create" method="post">
+    <div class="form-group">
+        <label>First Name</label>
+        <input type="text"  name="firstName" class="form-control">
     </div>
-</div>
+    <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" name="lastName" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Username</label>
+        <input type="text" name="username" class="form-control">
+    </div>
 
+    <button type="submit" class="btn btn-primary" href="/users/profile"> Submit</button>
+    <br>
+</form>
+</div>
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
