user can create a post from UI when logged in

--- a/src/main/resources/templates/welcomewarn.html
+++ b/src/main/resources/templates/welcomewarn.html
@@ -32,6 +32,9 @@
 
 </div>
 
+<div class = "alert alert-danger" role="alert">
+    Please update your profile settings!
+</div>
 
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
