--- a/src/main/resources/templates/threads.html
+++ b/src/main/resources/templates/threads.html
@@ -30,6 +30,20 @@
 
 </div>
 
+<div style="width: 400px; margin-left: 125px;">
+    <form action="/threads/create" method="post">
+        <div class="form-group">
+            <label>Title</label>
+            <input type="text"  name="title" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Body</label>
+            <input type="text" name="body" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary" href="/users/profile"> Submit</button>
+        <br>
+    </form>
+</div>
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
