--- a/src/main/resources/templates/threadswarn.html
+++ b/src/main/resources/templates/threadswarn.html
@@ -8,10 +8,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/welcome">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/threads/page">Threads</a>
             </li>
             <li class="nav-item">
@@ -24,15 +24,17 @@
 <div class="jumbotron jumbotron-fluid">
 
     <div class="container">
-        <h1 class="display-4">{{message}}</h1>
-        <p class="lead">Welcome to the Forum Webapp</p>
+        <h1 class="display-4">Threads</h1>
         <hr class="my-4">
-        <p>This is a simple forum webapp that uses MongoDB and Google Oauth2 authentication</p>
     </div>
 
 </div>
 
+<br>
 
+<div class = "alert alert-danger" role="alert">
+    Please update your profile settings before posting a new thread!
+</div>
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
