remove redundant html

--- a/src/main/resources/templates/threads.html
+++ b/src/main/resources/templates/threads.html
@@ -1,34 +1,7 @@
 {{>layout/header}}
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Forum</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/welcome">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/threads/page">Threads</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/users/profile">Profile</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<div class="jumbotron jumbotron-fluid">
-
-    <div class="container">
-        <h1 class="display-4">Threads</h1>
-        <hr class="my-4">
-    </div>
-
-</div>
+{{>layout/threads-top}}
 
 <div style="width: 400px; margin-left: 125px;">
     <form action="/threads/create" method="post">
@@ -44,6 +17,7 @@
         <br>
     </form>
 </div>
+
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
