removed redundant html and view for all threads

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,6 +3,12 @@
 
 {{>layout/welcome-top}}
 
+{{^loggedIn}}
+    <div class = "alert alert-danger" role="alert">
+        Please update your profile settings!
+    </div>
+{{/loggedIn}}
+
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
