--- a/src/main/resources/templates/updateprofile.html
+++ b/src/main/resources/templates/updateprofile.html
@@ -1,59 +1,25 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>{{title}}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css" />
-</head>
+{{>layout/header}}
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Forum</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/welcome">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/threads/page">Threads</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/users/profile">Profile</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">Profile</h1>
-        <hr class="my-4">
-        <p>Please update your details to use the forum.</p>
-    </div>
-
-</div>
+{{>layout/profile-top}}
 
 <div style="width: 400px; margin-left: 125px;">
-<form action="/users/create" method="post">
-    <div class="form-group">
-        <label>First Name</label>
-        <input type="text"  name="firstName" class="form-control">
-    </div>
-    <div class="form-group">
-        <label>Last Name</label>
-        <input type="text" name="lastName" class="form-control">
-    </div>
-    <div class="form-group">
-        <label>Username</label>
-        <input type="text" name="username" class="form-control">
-    </div>
+    <form action="/users/create" method="post">
+        <div class="form-group">
+            <label>First Name</label>
+            <input type="text"  name="firstName" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Last Name</label>
+            <input type="text" name="lastName" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" name="username" class="form-control">
+        </div>
 
-    <button type="submit" class="btn btn-primary" href="/users/profile"> Submit</button>
-    <br>
-</form>
+        <button type="submit" class="btn btn-primary" href="/users/profile"> Submit</button>
+        <br>
+    </form>
 </div>
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
