--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,13 +8,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/welcome">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/threads/page">Threads</a>
+                <a class="nav-link" href="/threads/page">New Thread</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/threads/sort/rank/asc">Threads</a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="/users/profile">Profile</a>
             </li>
         </ul>
