--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <body>
 {{>layout/profile-top}}
 <div class="card">
-    <div class="card-body">
+    <div class="card-body" style="width: 400px; margin-left: 125px;">
         <p> Name: {{firstname}} {{lastname}} </p>
         <p> Username: {{username}}
         <p> Email: {{email}}</p>
