--- a/src/main/resources/templates/thread.html
+++ b/src/main/resources/templates/thread.html
@@ -1,4 +1,11 @@
-{{>layout/header}}
+<!DOCTYPE HTML>
+<head>
+    <title>{{title}}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css" />
+</head>
+
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -8,16 +15,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/welcome">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/threads/page">New Thread</a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item">
                 <a class="nav-link" href="/threads/sort/rank/asc">Threads</a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item">
                 <a class="nav-link" href="/users/profile">Profile</a>
             </li>
         </ul>
@@ -25,39 +32,34 @@
 </nav>
 
 <div class="jumbotron jumbotron-fluid">
-
     <div class="container">
-        <h1 class="display-4">New Thread</h1>
+        <h1 class="display-4">{{title}}</h1>
+        <p class="lead">{{body}}</p>
         <hr class="my-4">
+        <p>Posted by <b> {{username}} </b> on <b> {{date}} </b></p>
     </div>
-
 </div>
 
-{{#loggedIn}}
-
 <div style="width: 400px; margin-left: 125px;">
-    <form action="/threads/create" method="post">
+    {{#comments}}
+    <p><b>{{username}}: </b> {{response}}</p>
+    <p>{{date}}</p>
+    <br>
+    {{/comments}}
+</div>
+
+<hr>
+<div style="width: 400px; margin-left: 125px;">
+    <form action="/comments/create/{{threadId}}" method="post">
         <div class="form-group">
-            <label>Title</label>
-            <input type="text"  name="title" class="form-control">
+            <label>Comment</label>
+            <input type="text"  name="response" class="form-control">
         </div>
-        <div class="form-group">
-            <label>Body</label>
-            <input type="text" name="body" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary" href="/users/profile"> Submit</button>
+        <button type="submit" class="btn btn-primary"> Submit</button>
         <br>
     </form>
 </div>
-{{/loggedIn}}
-
-{{^loggedIn}}
-<div class = "alert alert-danger" role="alert">
-    Please update your profile settings before posting a new thread!
-</div>
-{{/loggedIn}}
-
+<br>
 <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
-</html>
